assets/css/styles.css
html {
    scroll-behavior: smooth;
}
/*Styling for the social links and navbar*/
#t-nav {
    border-bottom: black;
    border-style: hidden hidden solid hidden;
    position: fixed;
    top: 0;
    width: 100%;
    background-color: white;
    font-family: "Barriecito", system-ui;
    font-weight: 400;
    font-style: normal;
    z-index:1;
}
#NavCollapse {
    transition: 0.3s;
}
.nav-socials {
    font-size: 1.8rem;
}

.nav-words {
    font-size: 1.4rem;
}
a.nav-link {
    color: black;
}

a.nav-link:hover {
    color: #53a2be;
    transition: 0.2s;
}
/*Stops social links from wrapping on smaller screens*/
.nav {
    flex-wrap: nowrap !important;
}

/*Stylig for the header content*/
#h-content {
    margin-top: 60px;
    background-image: linear-gradient(to right, #0a2239, #132e32);
}
/*Styling for the header text*/
#h-writing {
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings: "wdth" 100;
    color: white;
}
/*Can't style the scroll prompt properly and as this was beyond the intial scope of the project, I have left it*/
/*
/*#scroll-prompt{
    position: relative;
    bottom: 10vh;
    right: auto;
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings: "wdth" 100;
    color: white;
    text-align: center;
}*/

/*About scetion styling*/
#about {
    background-image: linear-gradient(to right, #53a2be, #1d84b5);
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings: "wdth" 100;
    color: white;
    padding-top:30px;
}
/*About heading styling*/
#a-heading {
    font-family: "Barriecito", system-ui;
    font-weight: 400;
    font-style: normal;
}
/*About section contact me button styling*/
#button{
    background-color: #0a2239;
    color: white;
    border: none;
    padding: 10px 15px;
    margin-bottom: 5px;
    border-radius: 5px;
}
#button:hover{
    background-color: white;
    color:#0a2239 ;
    transition: 0.2s;
}
/*Project section styling*/
#projects{
    padding-top:100px;
    padding-bottom:100px;
    background-image: linear-gradient(to right, #0a2239, #132e32);
}
/*Project section links and screenshot styling*/
#projects a{
    text-decoration: none;
    color:white;
    text-align: center;
    display:flex;
    justify-content: center;
}
#projects a figcaption{
    font-size:1.5rem;
    margin:20px;
    font-family: "Barriecito", system-ui;
    font-weight: 400;
    font-style: normal;
}
#projects a figcaption:hover{
    color:black;
    transition: 0.3s;
}
/*Contact section styling*/
#contact-container{
    height:100%;
}
#contact{
    background-image: linear-gradient(to right, #53a2be, #1d84b5);
}
/*Contact details styling*/
#contacts{
    height:100%;
    font-size: 1.5rem;
    padding-top:3vh;
    padding-bottom:3vh;
}
#contacts ul{
    list-style-type: none;
    height:100%;
    color:white;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
}
#contacts ul li a{
    text-decoration: none;
    color:white;
}
#contacts ul li a:hover{
    color:#0a2239;
    transition:0.3s;
}
/* Contact form styling*/
#contact-form{
    height:100%;
    padding-top:3vh;
    padding-bottom:3vh;
    background-color: #1d84b5;
    color:white;
    justify-content: space-evenly;
    display: flex;
    flex-direction: column;
    padding-left: 5vw;
    padding-right: 5vw
}
#contact-form label{
  display:none;
}
#contact-form input, #contact-form textarea{
    margin-top:1vh;
}
/*Contact form button styling*/
#submit{
    background-color: #0a2239;
    color: white;
    border: none;
    padding: 10px 15px;
    margin-bottom: 5px;
    border-radius: 5px;
}
#submit:hover{
    background-color: white;
    color:#0a2239 ;
    transition: 0.2s;
}

